--- a/OpenGL-learning/OpenGL-learning.vcxproj.filters
+++ b/OpenGL-learning/OpenGL-learning.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="src\private\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\private\VertexBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\public\VertexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
