--- a/OpenGL-learning/OpenGL-learning.vcxproj
+++ b/OpenGL-learning/OpenGL-learning.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="src\private\Main.cpp" />
     <ClCompile Include="src\private\VertexBuffer.cpp" />
+    <ClCompile Include="src\private\Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\Glad\Glad.vcxproj">
@@ -168,6 +169,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\public\Shader.h" />
     <ClInclude Include="src\public\VertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
