--- a/OpenGL-learning/OpenGL-learning.vcxproj.filters
+++ b/OpenGL-learning/OpenGL-learning.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="src\private\VertexBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\private\Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\public\VertexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\public\Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
