--- a/OpenGL-learning/OpenGL-learning.vcxproj
+++ b/OpenGL-learning/OpenGL-learning.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="src\private\Shader.cpp" />
     <ClCompile Include="src\private\IndexBuffer.cpp" />
     <ClCompile Include="src\private\Window.cpp" />
+    <ClCompile Include="src\private\VertexArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\Glad\Glad.vcxproj">
@@ -173,6 +174,7 @@
   <ItemGroup>
     <ClInclude Include="src\public\IndexBuffer.h" />
     <ClInclude Include="src\public\Shader.h" />
+    <ClInclude Include="src\public\VertexArray.h" />
     <ClInclude Include="src\public\VertexBuffer.h" />
     <ClInclude Include="src\public\Window.h" />
   </ItemGroup>
